--- a/public/game.css
+++ b/public/game.css
@@ -3,12 +3,14 @@ body,
 #game-content {
   width: 100%;
   height: 100%;
+  background-color: var(--theme-primary);
+  color: var(--theme-contrast)
 }
 
 .cell,
 .bttn {
   position: absolute;
-  border: 1px solid black;
+  border: 1px solid var(--theme-contrast);
   text-align: center;
 }
 
